// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MarkdownEditor - Snapshots > matches snapshot with custom className 1`] = `
<div
  data-ssr="false"
  data-testid="dynamic-wrapper"
>
  <div
    data-testid="loading-state"
  >
    <div
      class="flex flex-col"
      data-testid="container"
    >
      <div
        class="h-11 w-full rounded-md"
        data-slot="skeleton"
        data-testid="skeleton"
      />
      <div
        class="mt-[28px] h-4 w-3/5 rounded-md"
        data-slot="skeleton"
        data-testid="skeleton"
      />
    </div>
  </div>
  <div
    class="custom-editor"
    data-has-onchange="false"
    data-has-ref="false"
    data-markdown=""
    data-testid="editor-placeholder"
  >
    Mock Editor
  </div>
</div>
`;

exports[`MarkdownEditor - Snapshots > matches snapshot with default props 1`] = `
<div
  data-ssr="false"
  data-testid="dynamic-wrapper"
>
  <div
    data-testid="loading-state"
  >
    <div
      class="flex flex-col"
      data-testid="container"
    >
      <div
        class="h-11 w-full rounded-md"
        data-slot="skeleton"
        data-testid="skeleton"
      />
      <div
        class="mt-[28px] h-4 w-3/5 rounded-md"
        data-slot="skeleton"
        data-testid="skeleton"
      />
    </div>
  </div>
  <div
    data-has-onchange="false"
    data-has-ref="false"
    data-markdown=""
    data-testid="editor-placeholder"
  >
    Mock Editor
  </div>
</div>
`;

exports[`MarkdownEditor - Snapshots > matches snapshot with markdown content 1`] = `
<div
  data-ssr="false"
  data-testid="dynamic-wrapper"
>
  <div
    data-testid="loading-state"
  >
    <div
      class="flex flex-col"
      data-testid="container"
    >
      <div
        class="h-11 w-full rounded-md"
        data-slot="skeleton"
        data-testid="skeleton"
      />
      <div
        class="mt-[28px] h-4 w-3/5 rounded-md"
        data-slot="skeleton"
        data-testid="skeleton"
      />
    </div>
  </div>
  <div
    data-has-onchange="false"
    data-has-ref="false"
    data-markdown="# Test Heading"
    data-testid="editor-placeholder"
  >
    Mock Editor
  </div>
</div>
`;

exports[`MarkdownEditor - Snapshots > matches snapshot with placeholder 1`] = `
<div
  data-ssr="false"
  data-testid="dynamic-wrapper"
>
  <div
    data-testid="loading-state"
  >
    <div
      class="flex flex-col"
      data-testid="container"
    >
      <div
        class="h-11 w-full rounded-md"
        data-slot="skeleton"
        data-testid="skeleton"
      />
      <div
        class="mt-[28px] h-4 w-3/5 rounded-md"
        data-slot="skeleton"
        data-testid="skeleton"
      />
    </div>
  </div>
  <div
    data-has-onchange="false"
    data-has-ref="false"
    data-markdown=""
    data-placeholder="Start typing..."
    data-testid="editor-placeholder"
  >
    Mock Editor
  </div>
</div>
`;
